Changes for 2.3.1

New features:
A.F....... [ZBX-1357] updated Spanish translation; thanks to Zabbix translators (Richlv)

Bug fixes:
........S. [ZBX-8143] triggers are now committed to the database individually when setting to an unknown state to avoid potential locking between the poller and history syncer (Juris)
.......P.. [ZBX-7968] fixed bug when proxy stopped sending history data if it had more than 1000 unmonitored item values in history table; thanks to Corey Shaw for identifying the issue and providing a patch (wiper)
..F....... [ZBX-8221] corrected labels while copying items (Andrejs)
........S. [ZBX-8092] added disabled hosts, disabled items and enabled items of disabled hosts to the configuration cache for correct macro expansion in notifications (igors)

--------------------------------------------------------------------------------
Changes for 2.3.0

New features:
A.F.I..PS. [ZBXNEXT-1782] added support of new trigger expression operators ">=", "<=", "<>", "and", "or" and "not"; removed existing "#", "|" and "&" (asaveljevs, Pavels)
...GI..PS. [ZBXNEXT-2203] added information on the reason items become not supported (Alexei, asaveljevs)
..F....... [ZBXNEXT-734] implemented support for URL as dynamic screen element and added macro support (Ivo)
...GI..PS. [ZBXNEXT-497] added support for patterns in "Include" configuration directive (asaveljevs)
...G...... [ZBXNEXT-1506] added support for vfs.dev.read[] and vfs.dev.write[] on AIX; thanks to Jairo Lopez and Boris Manojlovic for patches (asaveljevs)
..F....... [ZBX-5430] implemented ISO 8601 standard date format "YYYY-MM-DD hh:mm:ss" as default (Ivo)
A......... [ZBX-7981] deprecated "exists" API methods (Ivo)
A.F....... [ZBX-7949] improved multibyte string support (Ivo)
..F....... [ZBXNEXT-2270] changed "Status" dropdown in host and host prototype forms to "Enabled" checkbox (Krists)
..F....... [ZBX-7941] changed page footer to not show debug in fullscreen mode (Krists)