@@ -126,10 +126,10 @@ LogFile=/tmp/zabbix_proxy.log
 DBName=zabbix_proxy
 
 ### Option: DBSchema
-#	Schema name. Used for IBM DB2.
+#	Schema name. Used for IBM DB2 and PostgreSQL.
 #
 # Mandatory: no
-# Default:
+# Default for IBM DB2 and PostgreSQL:
 # DBSchema=
 
 ### Option: DBUser
