@@ -78,10 +78,10 @@ LogFile=/tmp/zabbix_server.log
 DBName=zabbix
 
 ### Option: DBSchema
-#	Schema name. Used for IBM DB2.
+#	Schema name. Used for IBM DB2 and PostgreSQL.
 #
 # Mandatory: no
-# Default:
+# Default for IBM DB2 and PostgreSQL:
 # DBSchema=
 
 ### Option: DBUser
