@@ -209,7 +209,7 @@ static int	is_recoverable_mysql_error(void)
  ******************************************************************************/
 int	zbx_db_connect(char *host, char *user, char *password, char *dbname, char *dbschema, char *dbsocket, int port)
 {
-	int		ret = ZBX_DB_OK;
+	int		rc, ret = ZBX_DB_OK;
 #if defined(HAVE_IBM_DB2)
 	char		*connect = NULL;
 #elif defined(HAVE_ORACLE)
@@ -410,6 +410,19 @@ int	zbx_db_connect(char *host, char *user, char *password, char *dbname, char *d
 		ret = ZBX_DB_DOWN;
 		goto out;
 	}
+
+	if (NULL != dbschema && '\0' != *dbschema)
+	{
+		char	*dbschema_esc;
+
+		dbschema_esc = zbx_db_dyn_escape_string(dbschema);
+		if (ZBX_DB_DOWN == (rc = zbx_db_execute("set schema '%s'", dbschema_esc)) || ZBX_DB_FAIL == rc)
+			ret = rc;
+		zbx_free(dbschema_esc);
+	}
+
+	if (ZBX_DB_FAIL == ret || ZBX_DB_DOWN == ret)
+		goto out;
 
 	result = zbx_db_select("%s", "select oid from pg_type where typname='bytea'");
 
