@@ -1584,6 +1584,9 @@ int	DBtxn_ongoing()
 int	DBtable_exists(const char *table_name)
 {
 	char		*table_name_esc;
+#ifdef HAVE_POSTGRESQL
+	char		*table_schema_esc;
+#endif
 	DB_RESULT	result;
 	int		ret;
 
@@ -1607,12 +1610,18 @@ int	DBtable_exists(const char *table_name)
 				" and lower(tname)='%s'",
 			table_name_esc);
 #elif defined(HAVE_POSTGRESQL)
+	table_schema_esc = DBdyn_escape_string(NULL == CONFIG_DBSCHEMA || '\0' == *CONFIG_DBSCHEMA ?
+			"public" : CONFIG_DBSCHEMA);
+
 	result = DBselect(
 			"select 1"
 			" from information_schema.tables"
 			" where table_name='%s'"
-				" and table_schema='public'",
-			table_name_esc);
+				" and table_schema='%s'",
+			table_name_esc, table_schema_esc);
+
+	zbx_free(table_schema_esc);
+
 #elif defined(HAVE_SQLITE3)
 	result = DBselect(
 			"select 1"
@@ -1644,7 +1653,7 @@ int	DBfield_exists(const char *table_name, const char *field_name)
 	char		*table_name_esc, *field_name_esc;
 	int		ret;
 #elif defined(HAVE_POSTGRESQL)
-	char		*table_name_esc, *field_name_esc;
+	char		*table_name_esc, *field_name_esc, *table_schema_esc;
 	int		ret;
 #elif defined(HAVE_SQLITE3)
 	char		*table_name_esc;
@@ -1699,6 +1708,8 @@ int	DBfield_exists(const char *table_name, const char *field_name)
 
 	DBfree_result(result);
 #elif defined(HAVE_POSTGRESQL)
+	table_schema_esc = DBdyn_escape_string(NULL == CONFIG_DBSCHEMA || '\0' == *CONFIG_DBSCHEMA ?
+			"public" : CONFIG_DBSCHEMA);
 	table_name_esc = DBdyn_escape_string(table_name);
 	field_name_esc = DBdyn_escape_string(field_name);
 
@@ -1706,11 +1717,13 @@ int	DBfield_exists(const char *table_name, const char *field_name)
 			"select 1"
 			" from information_schema.columns"
 			" where table_name='%s'"
-				" and column_name='%s'",
-			table_name_esc, field_name_esc);
+				" and column_name='%s'"
+				" and table_schema='%s'",
+			table_name_esc, field_name_esc, table_schema_esc);
 
 	zbx_free(field_name_esc);
 	zbx_free(table_name_esc);
+	zbx_free(table_schema_esc);
 
 	ret = (NULL == DBfetch(result) ? FAIL : SUCCEED);
 
