@@ -1,6 +1,7 @@
 Changes for 2.3.1
 
 New features:
+.......PS. [ZBXNEXT-2254] DBName configuration parameter now applies to PostgreSQL as well as IBM DB2 (Juris)
 A.F....... [ZBX-1357] updated Spanish translation; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
